--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.3'
+version: '3.8'
 services:
   php-apache-environment:
-    image: intan/quiz
+    image: intanvionasari/quiz
     container_name: php-apache
     depends_on:
       - db
@@ -21,4 +21,4 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 168.138.25.236/24
+        - subnet: 172.20.0.0/24
